--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,9 +9,10 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^5.0.3"
   },
+  "homepage": "https://artem-dykyi.github.io/reactLibrery1/",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build --public-url ./",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "gh-pages -d build"
